--- a/templates/browse.html.jinja
+++ b/templates/browse.html.jinja
@@ -9,6 +9,20 @@
   <body>
   {% include "components/navbar.html.jinja" %}
     <h1>Beep!</h1>
+  <main class="container row g-4 mx-auto">
+    {% for item in products%}
+    <div class="col-4 ">
+      <div class="card">
+        <img src="{{ item['image'] }}" class="card-img-top" alt="{{ item['name'] }}">
+          <div class="card-body">
+            <h5 class="card-title">{{ item["name"] }}</h5>
+            <p class="card-text">{{ item['price'] }}</p>
+            <a href="#" class="btn btn-primary">add to cart?</a>
+          </div>
+      </div>
+    </div>
+    {% endfor %}
+  </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
