--- a/templates/browse.html.jinja
+++ b/templates/browse.html.jinja
@@ -9,6 +9,14 @@
   <body>
   {% include "components/navbar.html.jinja" %}
     <h1>Beep!</h1>
+
+  <form class="container" action=""/browse>
+    <div class="input-group mb-3">
+      <input type="text" name="query" class="form-control" placeholder="Search..." aria-label="Search">
+      <button class="btn btn-outline-secondary" type="submit">Search</button>
+    </div>
+  
+  </form>
   <main class="container row g-4 mx-auto">
     {% for item in products%}
     <div class="col-4 ">
