--- a/templates/components/navbar.html.jinja
+++ b/templates/components/navbar.html.jinja
@@ -15,11 +15,21 @@
         <li class="nav-item">
           <a class="nav-link" href="/signup">Sign up/Sign in</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/cart">Cart</a>
+        </li>
       </ul>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
+      {% if current_user.is_authenticated %}
+        hi {{ current_user.first_name }}
+      {% else %}
+      <li class="nav-item">
+        <a class="nav-link" href="/signup">Sign up/Sign in</a>
+      </li>
+      {% endif %}
     </div>
   </div>
 </nav>
