--- a/templates/signin.html.jinja
+++ b/templates/signin.html.jinja
@@ -8,20 +8,26 @@
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.122.0">
     <title>Signin</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
+{% for message in get_flashed_messages() %}
+    <div class="alert alert-warning" role="alert">
+  {{ message }}
+    </div>
+{%endfor%}
     {% include "components/navbar.html.jinja" %}
 
 <main class="form-signin w-100 m-auto">
-  <form>
+  <form action="/signin" method="post">
     <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
     <div class="form-floating">
-      <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+      <input type="email" class="form-control" id="floatingPassword" placeholder="Password" required name="email">
       <label for="floatingPassword">Email Address</label>
     </div>
     <div class="form-floating">
-      <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+      <input type="password" class="form-control" id="floatingPassword" placeholder="Password" required name="password">
       <label for="floatingPassword">Password</label>
     </div>
 
