--- a/templates/browse.html.jinja
+++ b/templates/browse.html.jinja
@@ -25,7 +25,7 @@
           <div class="card-body">
             <h5 class="card-title">{{ item["name"] }}</h5>
             <p class="card-text">{{ item['price'] }}</p>
-            <a href="/product/{{ item['id'] }}" class="btn btn-primary">add to cart?</a>
+            <a href="/product/{{ item['id'] }}" class="btn btn-primary"> View item </a>
           </div>
       </div>
     </div>
