--- a/templates/components/navbar.html.jinja
+++ b/templates/components/navbar.html.jinja
@@ -13,9 +13,6 @@
           <a class="nav-link" href="/browse">Browse</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/signup">Sign up/Sign in</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link" href="/cart">Cart</a>
         </li>
       </ul>
@@ -24,12 +21,21 @@
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
       {% if current_user.is_authenticated %}
-        hi {{ current_user.first_name }}
-      {% else %}
-      <li class="nav-item">
-        <a class="nav-link" href="/signup">Sign up/Sign in</a>
-      </li>
-      {% endif %}
+      <div class="dropdown ps-2">
+        <button class="btn btn-warning dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+           Hello {{current_user.username}}
+        </button>
+        <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">View Account</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="\logout">Sign Out</a></li>
+        </ul>
+        </div>
+      {%else%}
+        <div class="ps-2">
+          <a class="btn btn-outline-warning" href="/signin ">Sign-In</a>
+        </div>
+      {%endif%}
     </div>
   </div>
 </nav>
