--- a/templates/product.html.jinja
+++ b/templates/product.html.jinja
@@ -3,26 +3,32 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{product["name"]}}Mechs&Robots</title>
+    <title>{{product["name"]}}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
   {% include "components/navbar.html.jinja" %}
-    <h1>Beep! (product page)</h1>
-    <div class="card mb-3" style="max-width: 540px;">
-      <div class="row g-0">
-        <div class="col-md-4">
-        <img src="{{ product['image'] }}" class="img-fluid rounded-start" alt="image of products">
-      </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+  <div class="container">
+    <div class="row">
+        <div class="col">
+            <img src={{product["image"]}} class="rounded " alt={{product["description"]}}>
         </div>
-        </div>
-      </div>
+        <div class="col ps-5">
+            <h3 class="">{{product["name"]}}</h3>
+            <br>
+            <p class="fs-5">{{product["description"]}}</p>
+            <h4>${{product["price"]}}</h4>
+            <br>
+            <form method="post">
+              <div>
+                <label for="qty" class="form-label">Qty</label>
+                <input type="number" class="form-control" id="qty" min="1" max="5" value="1" name="qty">
+              </div>
+            </form>
+            <button type="button" class="fs-4 btn btn-warning w-75"> Add to Cart </button>
+        </div>    
     </div>
+  </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
