--- a/templates/cartpage.html.jinja
+++ b/templates/cartpage.html.jinja
@@ -29,7 +29,7 @@
                 <td>{{item["id"]}}</td>
                 <td><img src="{{item['image']}}" class="rounded" alt="{{item['description']}}" height="80"></td>
                 <td>{{item["name"]}}</td>
-                <td>{{  "%.2f"  | format(item(total)["price"]) }}
+                <td>{{  "%.2f"  | format(item["price"]) }}
                 <td>{{item["quantity"]}}</td>
                 <td><svg viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg" width="15" height="15"><path d="M4.5 14.5v-3a1 1 0 011-1h4a1 1 0 011 1v3m3 0h-12a1 1 0 01-1-1v-12a1 1 0 011-1h8.586a1 1 0 01.707.293l3.414 3.414a1 1 0 01.293.707V13.5a1 1 0 01-1 1z" stroke="currentColor"></path></svg></td>
                 <td><svg viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg" width="15" height="15"><path d="M4.5 3V1.5a1 1 0 011-1h4a1 1 0 011 1V3M0 3.5h15m-13.5 0v10a1 1 0 001 1h10a1 1 0 001-1v-10M7.5 7v5m-3-3v3m6-3v3" stroke="currentColor"></path></svg></td>
