--- a/templates/browse.html.jinja
+++ b/templates/browse.html.jinja
@@ -19,13 +19,13 @@
   </form>
   <main class="container row g-4 mx-auto">
     {% for item in products%}
-    <div class="col-4 ">
+    <div class="col-md-6 col-lg-3 col-12">
       <div class="card">
         <img src="{{ item['image'] }}" class="card-img-top" alt="{{ item['name'] }}">
           <div class="card-body">
             <h5 class="card-title">{{ item["name"] }}</h5>
-            <p class="card-text">{{ item['price'] }}</p>
-            <a href="/product/{{ item['id'] }}" class="btn btn-primary"> View item </a>
+            <p class="card-text">{{  "%.2f" | format(item['price']) }}</p>
+            <a href="/product/{{ item['id'] }}" class="btn btn-info"> View item </a>
           </div>
       </div>
     </div>
