--- a/templates/signin.html.jinja
+++ b/templates/signin.html.jinja
@@ -32,7 +32,7 @@
     </div>
 
     
-    <button class="btn btn-primary w-100 py-2" type="submit">Beep Boop(Sign in!)</button>
+    <button  class="btn btn-info w-100 py-2" type="submit">Beep Boop(Sign in!)</button>
   </form>
 </main>
 <script src="/docs/5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
