--- a/templates/product.html.jinja
+++ b/templates/product.html.jinja
@@ -24,8 +24,8 @@
                 <label for="qty" class="form-label">Qty</label>
                 <input type="number" class="form-control" id="qty" min="1" max="5" value="1" name="qty">
               </div>
+              <button type="submit" class="fs-4 btn btn-info w-75"> Add to Cart </button>
             </form>
-            <button type="button" class="fs-4 btn btn-info w-75"> Add to Cart </button>
         </div>    
     </div>
   </div>
